add: add the fonts CDN

--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,16 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+		<!-- Fonts -->
+		<link rel="preconnect" href="https://fonts.gstatic.com" />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Karla:wght@700&display=swap"
+			rel="stylesheet"
+		/>
+		<link
+			href="https://fonts.googleapis.com/css2?family=Rubik:wght@700&display=swap"
+			rel="stylesheet"
+		/>
 		<title>React App</title>
 	</head>
 	<body>
