--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
 			href="https://fonts.googleapis.com/css2?family=Rubik:wght@700&display=swap"
 			rel="stylesheet"
 		/>
-		<title>React App</title>
+		<title>Gabriel Fierro</title>
 	</head>
 	<body>
 		<noscript>You need to enable JavaScript to run this app.</noscript>
