--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta
 			name="description"
-			content="Web site created using create-react-app"
+			content="This Portfolio was created with React and talk about me and my projects"
 		/>
 		<link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 		<!--
